<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tryton 4</string>
    <string name="rate_on_gp">Rate on \n>Google Play</string>
    <string name="play">Play</string>
    <string name="achievements">Achievements</string>
    <string name="preferences">Preferences</string>
    <string name="about">About</string>
    <string name="sfx">SFX</string>
    <string name="music">Music</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="about_content"><![CDATA[<h1>About</h1>A Sathra Mobile Games and Apps production<br/>Powered by <font color="#fbdb47">open-source Sathra 2D game engine</font><p/><font color="#fbdb47">Concept, Design and Programming</font><br/>Milosz Moczkowski<p/>Visit <a href="http://sathra.eu">sathra.eu</a>]]></string>
	<string name="quit">Quit</string>
	<string name="again">Again!</string>
	<string name="resume">Resume</string>
	<string name="paused">Paused</string>
</resources>