<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sathra="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none" >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <LinearLayout
                android:id="@+id/menu_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:src="@drawable/img_hud_score" />

                <eu.sathra.view.TextView
                    android:id="@+id/about_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/play"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:textColor="@android:color/white"
                    sathra:fontFamily="visitor.ttf" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/menu_highscores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:src="@drawable/img_menu_highscores" />

                <eu.sathra.view.TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="Highscores"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:textColor="@android:color/white"
                    sathra:fontFamily="visitor.ttf" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <LinearLayout
                android:id="@+id/menu_achievements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:src="@drawable/img_menu_achievements" />

                <eu.sathra.view.TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/achievements"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:textColor="@android:color/white"
                    sathra:fontFamily="visitor.ttf" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/menu_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:src="@drawable/img_hud_ammo" />

                <eu.sathra.view.TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/about"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:textColor="@android:color/white"
                    sathra:fontFamily="visitor.ttf" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

</ScrollView>